--- a/styles/_material.module.scss
+++ b/styles/_material.module.scss
@@ -237,10 +237,10 @@ input {
         width: 30%;
         font-style: normal;
         font-family: "Rubik";
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 22px;
-        color: #012927;
+        font-weight: 700 !important;
+        font-size: 16px !important;
+        line-height: 22px !important;
+        color: #012927 !important;
     }
     input {
         background: #ffffff;
@@ -299,6 +299,9 @@ input {
             scale: 0.8;
             cursor: pointer;
         }
+    }
+    .disable {
+        opacity: 0.4;
     }
 }
 .material-header {
@@ -504,5 +507,11 @@ input {
         background-color: #fdcf6f;
         transform: all 0.3s ease-in-out;
         background-image: none;
+    }
+    .category-tag-name {
+        -webkit-line-clamp: 1;
+        overflow: hidden;
+        max-width: 80px;
+        text-overflow: ellipsis;
     }
 }
