--- a/styles/_main-layout.module.scss
+++ b/styles/_main-layout.module.scss
@@ -32,9 +32,16 @@ aside {
       left: 70px;
       z-index: 0;
       transition: all 0.5s ease;
+      &::-webkit-scrollbar {
+        display: none !important;
+      }
+      overflow-y: hidden;
     }
   }
 
+  ::-webkit-scrollbar-thumb {
+    display: none;
+  }
   .side-bar-hover {
     padding-left: 30px;
     position: absolute;
