--- a/styles/_font.module.scss
+++ b/styles/_font.module.scss
@@ -1,210 +1,318 @@
 //INTER//
 
 @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-Light.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-Light.woff") format("woff");
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-ExtraBold.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-ExtraBold.woff") format("woff");
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-ExtraLight.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-ExtraLight.woff") format("woff");
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-Medium.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-Medium.woff") format("woff");
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-Regular.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-Regular.woff") format("woff");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-SemiBold.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-SemiBold.woff") format("woff");
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-Bold.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-Bold.woff") format("woff");
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-Thin.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-Thin.woff") format("woff");
-    font-weight: 100;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("../assets/fonts/Inter/Inter-Black.woff2") format("woff2"),
-      url("../assets/fonts/Inter/Inter-Black.woff") format("woff");
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  // RUBIK//
-  @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-SemiBoldItalic.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-SemiBoldItalic.woff') format('woff');
-    font-weight: 600;
-    font-style: italic;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-Light.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-Bold.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-ExtraBold.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-ExtraBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-MediumItalic.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-MediumItalic.woff') format('woff');
-    font-weight: 500;
-    font-style: italic;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-ExtraLight.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-ExtraLight.woff") format("woff");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-Medium.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-Medium.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-Medium.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-ExtraBoldItalic.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-ExtraBoldItalic.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-Regular.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-Light.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-SemiBold.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-LightItalic.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-LightItalic.woff') format('woff');
-    font-weight: 300;
-    font-style: italic;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-Bold.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-Black.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-Black.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-Thin.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-Thin.woff") format("woff");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-Italic.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/Inter-Black.woff2") format("woff2"),
+    url("../assets/fonts/Inter/Inter-Black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+// RUBIK//
+//   @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-SemiBoldItalic.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-SemiBoldItalic.woff') format('woff');
+//     font-weight: 600;
+//     font-style: italic;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-Bold.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-Bold.woff') format('woff');
+//     font-weight: bold;
+//     font-style: normal;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-MediumItalic.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-MediumItalic.woff') format('woff');
+//     font-weight: 500;
+//     font-style: italic;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-Medium.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-Medium.woff') format('woff');
+//     font-weight: 500;
+//     font-style: normal;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-ExtraBoldItalic.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-ExtraBoldItalic.woff') format('woff');
+//     font-weight: bold;
+//     font-style: italic;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-Light.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-Light.woff') format('woff');
+//     font-weight: 300;
+//     font-style: normal;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-LightItalic.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-LightItalic.woff') format('woff');
+//     font-weight: 300;
+//     font-style: italic;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-Black.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-Black.woff') format('woff');
+//     font-weight: 900;
+//     font-style: normal;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-Italic.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-Italic.woff') format('woff');
+//     font-weight: normal;
+//     font-style: italic;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-Regular.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-Regular.woff') format('woff');
+//     font-weight: normal;
+//     font-style: normal;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-ExtraBold.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-ExtraBold.woff') format('woff');
+//     font-weight: bold;
+//     font-style: normal;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-BlackItalic.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-BlackItalic.woff') format('woff');
+//     font-weight: 900;
+//     font-style: italic;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-SemiBold.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-SemiBold.woff') format('woff');
+//     font-weight: 600;
+//     font-style: normal;
+//     font-display: swap;
+// }
+
+// @font-face {
+//     font-family: 'Rubik';
+//     src: url('../assets/fonts/Rubik/Rubik-BoldItalic.woff2') format('woff2'),
+//         url('../assets/fonts/Rubik/Rubik-BoldItalic.woff') format('woff');
+//     font-weight: bold;
+//     font-style: italic;
+//     font-display: swap;
+// }
+
+//ROBOTO
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-BoldItalic.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-BoldItalic.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-Regular.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Black.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-Black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-ExtraBold.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-ExtraBold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-BlackItalic.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-BlackItalic.woff") format("woff");
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-BlackItalic.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-BlackItalic.woff') format('woff');
-    font-weight: 900;
-    font-style: italic;
-    font-display: swap;
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Medium.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-SemiBold.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-SemiBold.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-MediumItalic.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-MediumItalic.woff") format("woff");
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Rubik';
-    src: url('../assets/fonts/Rubik/Rubik-BoldItalic.woff2') format('woff2'),
-        url('../assets/fonts/Rubik/Rubik-BoldItalic.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Bold.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Italic.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-Italic.woff") format("woff");
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Light.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-ThinItalic.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-ThinItalic.woff") format("woff");
+  font-weight: 100;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-LightItalic.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-LightItalic.woff") format("woff");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Regular.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/fonts/Roboto/Roboto-Thin.woff2") format("woff2"),
+    url("../assets/fonts/Roboto/Roboto-Thin.woff") format("woff");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
