--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -93,3 +93,4 @@ input[type="text"]:focus {
 @import "./side-bar.module.scss";
 @import "./material.module.scss";
 @import "./font.module.scss";
+@import "./dashboard.module"
